--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
 </head>
-<link rel="script" href="script.js">
 <body>
-    
+    <script src="script.js"></script>
 </body>
 </html>
