--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
 </head>
+
 <body>
+    <button id="rock" class="rps">Rock</button>
+    <button id="paper" class="rps">Paper</button>
+    <button id="scissors" class="rps">Scissors</button>
+
+    <div class="displayRoundResults"></div>
+    <div class="displayPlayerScore"></div>
+    <div class="displayComScore"></div>
+    <div class="displayGameOver"></div>
+
     <script src="script.js"></script>
 </body>
+
 </html>
