--- a/index.html
+++ b/index.html
@@ -3,18 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <button id="rock" class="rps">Rock</button>
-    <button id="paper" class="rps">Paper</button>
-    <button id="scissors" class="rps">Scissors</button>
-
-    <div class="displayRoundResults"></div>
-    <div class="displayPlayerScore"></div>
-    <div class="displayComScore"></div>
-    <div class="displayGameOver"></div>
+    <div class="main">
+        <div class="welcome-header">
+            <h1>Welcome to the Rock Paper Scissors World Championship</h1>
+        </div>
+        <h3>Choose your weapon!</h3>
+        <div class="button-container">
+            <button id="rock" class="rps"></button>
+            <button id="paper" class="rps"></button>
+            <button id="scissors" class="rps"></button>
+        </div>
+        <div class="display-container">
+            <div class="displayRoundResults"></div>
+            <div class="displayPlayerScore"></div>
+            <div class="displayComScore"></div>
+            <div class="displayGameOver"></div>
+        </div>
+        <footer>
+            <p>Made by ATremanti @Github</p>
+            <a href="https://www.vecteezy.com/free-vector/rock-paper-scissors">Rock Paper Scissors Vectors by Vecteezy</a>
+        </footer>
+    </div>
 
     <script src="script.js"></script>
 </body>
